--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,9 @@
       <a href="/clinics" class="nav__link" data-link>Clinics</a>
       <a href="/settings" class="nav__link" data-link>Settings</a>
     </nav>
-    <div id="app"></div>
+    <div id="app">
+      <ul id="clinics"></ul>
+    </div>
     <script type="module" src="/static/js/index.js"></script>
   </body>
 </html>
