add weekdays and opening hours

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
     </nav>
     <div id="app">
       <ul id="clinics"></ul>
+      <ul id="week"></ul>
     </div>
     <script type="module" src="/static/js/index.js"></script>
   </body>
